# saltext-azurerm

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  NOTICE  NOTICE.txt  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: pr.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
changelog/: 1.added.md  37.fixed  40.fixed  46.fixed.md  47.added.md  56.fixed.md  68.added.md  72.added.md  81.added.md
docs/: all.rst  conf.py  index.rst
docs/ref/clouds/: all.rst  index.rst  saltext.azurerm.clouds.azurerm.rst  saltext.azurerm.clouds.rst
docs/ref/fileserver/: index.rst  saltext.azurerm.fileserver.azurefs.rst
docs/ref/modules/: all.rst  index.rst  saltext.azurerm.modules.azurerm_compute.rst  saltext.azurerm.modules.azurerm_compute_availability_set.rst  saltext.azurerm.modules.azurerm_compute_disk.rst  saltext.azurerm.modules.azurerm_compute_image.rst  saltext.azurerm.modules.azurerm_compute_virtual_machine.rst  saltext.azurerm.modules.azurerm_compute_virtual_machine_extension.rst  saltext.azurerm.modules.azurerm_compute_virtual_machine_image.rst  saltext.azurerm.modules.azurerm_compute_vitual_machine_image.rst  saltext.azurerm.modules.azurerm_dns.rst  saltext.azurerm.modules.azurerm_keyvault_key.rst  saltext.azurerm.modules.azurerm_keyvault_secret.rst  saltext.azurerm.modules.azurerm_keyvault_vault.rst  saltext.azurerm.modules.azurerm_network.rst  saltext.azurerm.modules.azurerm_resource.rst  saltext.azurerm.modules.rst
docs/ref/states/: all.rst  index.rst  saltext.azurerm.states.azurerm.rst  saltext.azurerm.states.azurerm_compute.rst  saltext.azurerm.states.azurerm_compute_availability_set.rst  saltext.azurerm.states.azurerm_compute_virtual_machine.rst  saltext.azurerm.states.azurerm_compute_virtuall_machine.rst  saltext.azurerm.states.azurerm_dns.rst  saltext.azurerm.states.azurerm_keyvault_key.rst  saltext.azurerm.states.azurerm_keyvault_secret.rst  saltext.azurerm.states.azurerm_keyvault_vault.rst  saltext.azurerm.states.azurerm_network.rst  saltext.azurerm.states.azurerm_resource.rst  saltext.azurerm.states.rst
docs/ref/utils/: all.rst  index.rst  saltext.azurerm.utils.azurerm.rst  saltext.azurerm.utils.rst
docs/topics/: authentication.rst  index.rst  installation.md
src/saltext/azurerm/: loader.py  version.py
src/saltext/azurerm/clouds/: azurerm.py  azurerm_mod.py
src/saltext/azurerm/fileserver/: azurefs.py
src/saltext/azurerm/modules/: azurerm_compute.py  azurerm_compute_availability_set.py  azurerm_compute_disk.py  azurerm_compute_image.py  azurerm_compute_virtual_machine.py  azurerm_compute_virtual_machine_extension.py  azurerm_compute_virtual_machine_image.py  azurerm_compute_vitual_machine_image.py  azurerm_dns.py  azurerm_keyvault_key.py  azurerm_keyvault_secret.py  azurerm_keyvault_vault.py  azurerm_mod.py  azurerm_network.py  azurerm_resource.py
src/saltext/azurerm/states/: azurerm_compute.py  azurerm_compute_availability_set.py  azurerm_compute_virtual_machine.py  azurerm_dns.py  azurerm_keyvault_key.py  azurerm_keyvault_secret.py  azurerm_keyvault_vault.py  azurerm_mod.py  azurerm_network.py  azurerm_resource.py
src/saltext/azurerm/utils/: __init__.py  azurerm.py  azurerm_mod.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/modules/: test_azurerm.py
tests/integration/states/: test_compute.py  test_compute_availability_set.py  test_compute_virtual_machine.py  test_dns.py  test_keyvault_key.py  test_keyvault_secret.py  test_keyvault_vault.py  test_network_interface.py  test_network_route.py  test_network_security_group.py  test_public_ip_address.py  test_resource_group.py  test_virtual_network.py
tests/unit/clouds/: test_azurerm.py
tests/unit/modules/: test_azurerm.py
tests/unit/states/: test_azurerm.py
tests/unit/utils/: test_azurerm.py
