[build-system]
requires = [
    "wheel",
    "setuptools>=50.3.2",
    "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/saltext/azurerm/version.py"
write_to_template = "__version__ = \"{version}\""

[project]
name = "saltext.azurerm"
description = "Salt Extension for interacting with Microsoft Azure"
authors = [
    {name = "EITR Technologies, LLC", email = "devops@eitr.tech"},
]
keywords = [
    "salt-extension",
]
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">= 3.9"
dynamic = ["version"]
dependencies = [
    "salt>=3006",
    "azure-batch==12.0.0",
    "azure-common==1.1.28",
    "azure-graphrbac==0.61.1",
    "azure-keyvault==4.2.0",
    "azure-identity==1.10.0",
    "azure-core==1.24.2",
    "azure-mgmt-authorization==2.0.0",
    "azure-mgmt-batch==16.2.0",
    "azure-mgmt-compute==27.1.0",
    "azure-mgmt-dns==8.0.0",
    "azure-mgmt-privatedns==1.0.0",
    "azure-mgmt-keyvault==10.1.0",
    "azure-mgmt-monitor==6.0.1",
    "azure-mgmt-msi==6.0.1",
    "azure-mgmt-network==20.0.0",
    "azure-mgmt-resource==21.1.0",
    "azure-mgmt-storage==21.0.0",
    "azure-mgmt-subscription==3.0.0",
    "azure-mgmt-web==6.1.0",
    "azure-storage-blob==12.12.0",
    "azure-storage-common==2.1.0",
    "azure-storage-file==2.1.0",
    "azure-storage-nspkg==3.1.0",
    "azure-storage-queue==12.3.0",
    "msrest==0.7.1",
    "msrestazure==0.6.4",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/salt-extensions/saltext-azurerm"
Documentation = "https://saltext-azurerm.readthedocs.io/en/latest/"
Source = "https://github.com/salt-extensions/saltext-azurerm"
Tracker = "https://github.com/salt-extensions/saltext-azurerm/issues"

[project.optional-dependencies]
changelog = ["towncrier==22.12.0"]
dev = [
    "nox[uv]>=2024.3",
    "pre-commit>=2.21.0",
]
docs = [
  "sphinx",
  "sphinx-prompt",
  "sphinxcontrib-spelling",
  "sphinx-copybutton",
  "towncrier==22.12.0",
  "sphinxcontrib-towncrier",
  "myst_parser",
  "furo",
  "sphinx-inline-tabs",
]
docsauto = ["sphinx-autobuild"]
lint = [
    "pylint==3.2.6",
]
tests = [
    "pytest>=7.2.0",
    "pytest-salt-factories>=1.0.0",
    "pytest-ordering>=0.6",
]

[project.entry-points."salt.loader"]
"saltext.azurerm" = "saltext.azurerm"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.distutils.bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[tool.distutils.sdist]
owner = "root"
group = "root"

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true
skip = ["src/saltext/azurerm/__init__.py"]
profile = "black"
line_length = 100

[tool.towncrier]
package = "saltext.azurerm"
filename = "CHANGELOG.md"
template = "changelog/.template.jinja"
directory = "changelog/"
start_string = "# Changelog\n"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/salt-extensions/saltext-azurerm/issues/{issue})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
