[metadata]
name = saltext.azurerm
description = Salt Extension Modules for Azure Resource Manager
long_description = file: README.md
long_description_content_type = text/markdown
author = EITR Technologies, LLC
author_email = devops@eitr.tech
keywords = salt-extension, salt, azure, msazure, cloud, microsoft, azurerm
url = https://github.com/salt-extensions/saltext-azurerm
project_urls =
    Source=https://github.com/salt-extensions/saltext-azurerm
    Tracker=https://github.com/salt-extensions/saltext-azurerm/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools-declarative-requirements
install_requires =
  salt>=3002
  jinja2<=3.0.1
  azure-batch==4.1.3
  azure-common==1.1.10
  azure-graphrbac==0.40.0
  azure-keyvault==0.3.7
  azure-mgmt-authorization==0.30.0
  azure-mgmt-batch==5.0.0
  azure-mgmt-compute==3.1.0rc3
  azure-mgmt-dns==1.2.0
  azure-mgmt-keyvault==0.40.0
  azure-mgmt-msi==0.1.0
  azure-mgmt-network==2.0.0rc1
  azure-mgmt-resource==1.2.2
  azure-mgmt-storage==1.5.0
  azure-mgmt-subscription==0.1.0
  azure-mgmt-web==0.34.1
  azure-storage==0.36.0
  azure-storage-blob==1.1.0
  azure-storage-common==1.1.0
  azure-storage-file==1.1.0
  azure-storage-nspkg==3.0.0
  azure-storage-queue==1.1.0
  msrest==0.4.25
  msrestazure==0.4.25

  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  states_dirs = saltext.azurerm.loader:get_states_dirs
#
#  module_dirs = saltext.azurerm.loader:get_module_dirs
#
#  cloud_dirs = saltext.azurerm.loader:get_cloud_dirs
#
#  utils_dirs = saltext.azurerm.loader:get_utils_dirs
#

[options.entry_points]
salt.loader=
  saltext.azurerm = saltext.azurerm


[options.extras_require]
tests =
  mock==3.0.5
  pytest==6.2.4
  pytest-salt-factories==0.906.0
  jinja2<3.1
dev =
  nox==2021.6.12
  pre-commit==2.13.0
  pylint<2.14.0
  SaltPyLint
docs =
  sphinx>=3.5.1
  jinja2<3.1
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild
release =
  twine
  wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
