[metadata]
name = saltext.azurerm
description = Salt Extension Modules for Azure Resource Manager
long_description = file: README.md
long_description_content_type = text/markdown
author = EITR Technologies, LLC
author_email = devops@eitr.tech
keywords = salt-extension, salt, azure, msazure, cloud, microsoft, azurerm
url = https://github.com/salt-extensions/saltext-azurerm
project_urls =
    Source=https://github.com/salt-extensions/saltext-azurerm
    Tracker=https://github.com/salt-extensions/saltext-azurerm/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  pyzmq==23.2.0
  setuptools>=58.3.0
  setuptools-declarative-requirements
  wheel
install_requires =
  azure-batch==12.0.0
  azure-common==1.1.28
  azure-graphrbac==0.61.1
  azure-keyvault==4.2.0
  azure-identity==1.10.0
  azure-core==1.24.2
  azure-mgmt-authorization==2.0.0
  azure-mgmt-batch==16.2.0
  azure-mgmt-compute==27.1.0
  azure-mgmt-dns==8.0.0
  azure-mgmt-privatedns==1.0.0
  azure-mgmt-keyvault==10.0.0
  azure-mgmt-msi==6.0.1
  azure-mgmt-network==20.0.0
  azure-mgmt-resource==21.1.0
  azure-mgmt-subscription==3.0.0
  azure-mgmt-web==6.1.0
  azure-storage-blob==12.12.0
  azure-storage-common==2.1.0
  azure-storage-file==2.1.0
  azure-storage-nspkg==3.1.0
  azure-storage-queue==12.3.0
  msrest==0.7.1
  msrestazure==0.6.4

  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  states_dirs = saltext.azurerm.loader:get_states_dirs
#
#  module_dirs = saltext.azurerm.loader:get_module_dirs
#
#  cloud_dirs = saltext.azurerm.loader:get_cloud_dirs
#
#  utils_dirs = saltext.azurerm.loader:get_utils_dirs
#

[options.entry_points]
salt.loader=
  saltext.azurerm = saltext.azurerm


[options.extras_require]
tests =
  mock>=3.0.5
  pytest>=7.2.0
  pytest-salt-factories>=1.0.0rc21
  Jinja2
dev =
  nox==2022.1.7
  pre-commit==2.13.0
  pylint<2.14.0
  SaltPyLint
docs =
  sphinx>=3.5.1
  Jinja2
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild
release =
  twine
  wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
